objects/SFSSDupeCatcher__Scenario_Rule__c.object
<CustomObject>
    <customHelpPage>SFSSDupeCatcher__Filter_Rules_Page_Help</customHelpPage>
    <fields>
        <fullName>SFSSDupeCatcher__First_N_Letters__c</fullName>
        <description>The number of initial letters or words you would like to match in the chosen field(s).</description>
        <inlineHelpText>The number of initial letters you would like to match in the chosen field(s).</inlineHelpText>
        <label>First N</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Fuzzy_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuzzy Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Mapping_Approach__c</fullName>
        <description>&quot;Exact&quot; exact field value match.
&quot;Domain&quot;  match domain part of a field.
&quot;First N Letters&quot; match first N characters.
&quot;Numeric Only&quot; strictly numeric characters.
&quot;First 5 Zip&quot; match first 5 digits of Zip.
&quot;Relaxed NA Phone&quot; match last 7 digits only.</description>
        <inlineHelpText>Indicates the type of matching that will be used on the chosen field(s).</inlineHelpText>
        <label>Matching Technique</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SFSSDupeCatcher__Match_field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>Domain</fullName>
                </value>
                <value>
                    <fullName>First N Letters</fullName>
                </value>
                <value>
                    <fullName>Numeric Only</fullName>
                </value>
                <value>
                    <fullName>Relaxed NA Phone</fullName>
                </value>
                <value>
                    <fullName>First 5 Zip</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Clean Name</fullName>
                </value>
                <value>
                    <fullName>Country Match</fullName>
                </value>
                <value>
                    <fullName>Street Address Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Match_Blanks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates matching on blank fields.</description>
        <inlineHelpText>If checked, DupeCatcher will match fields left blank.</inlineHelpText>
        <label>Match Blanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Match_field__c</fullName>
        <description>The field in a newly created or edited record that you would like this rule to use for matching against potential duplicates.</description>
        <inlineHelpText>The field used by the rule to identify duplicates.</inlineHelpText>
        <label>Source Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SFSSDupeCatcher__Scenario_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                    <default>true</default>
                    <label>Last Name</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Account ID</fullName>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Billing Street</fullName>
                </value>
                <value>
                    <fullName>Billing City</fullName>
                </value>
                <value>
                    <fullName>Billing State</fullName>
                </value>
                <value>
                    <fullName>Billing Postal Code</fullName>
                </value>
                <value>
                    <fullName>Billing Country</fullName>
                </value>
                <value>
                    <fullName>Shipping Street</fullName>
                </value>
                <value>
                    <fullName>Shipping City</fullName>
                </value>
                <value>
                    <fullName>Shipping State</fullName>
                </value>
                <value>
                    <fullName>Shipping Postal</fullName>
                </value>
                <value>
                    <fullName>Shipping Country</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Mailing Street</fullName>
                </value>
                <value>
                    <fullName>Mailing City</fullName>
                </value>
                <value>
                    <fullName>Mailing State</fullName>
                </value>
                <value>
                    <fullName>Mailing Postal</fullName>
                </value>
                <value>
                    <fullName>Mailing Country</fullName>
                </value>
                <value>
                    <fullName>Other Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Formula__c</fullName>
        <formula>SFSSDupeCatcher__Scenario__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Type_Formula__c</fullName>
        <formula>TEXT(SFSSDupeCatcher__Scenario__r.SFSSDupeCatcher__Scenario_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter Type - From Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
        <description>The Filter Type of the parent filter</description>
        <inlineHelpText>Read only field that shows the Filter Type of the parent filter for this rule.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario__c</fullName>
        <description>The parent filter for this rule.</description>
        <inlineHelpText>The filter under which this rule has been created.</inlineHelpText>
        <label>Filter</label>
        <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
        <relationshipLabel>DupeCatcher Filter Rules</relationshipLabel>
        <relationshipName>Scenario_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Target_Match_Field__c</fullName>
        <description>The Contact or Account field  that you would like this rule to use for matching against potential duplicates.  This field is only valid if the filter type is &quot;Lead to Contact&quot; and &quot;Lead to Account&quot;.</description>
        <inlineHelpText>The field used by the rule to identify duplicates for Lead to Account or Lead to Contact scenarios.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SFSSDupeCatcher__Scenario_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                    <default>true</default>
                    <label>Last Name</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Account ID</fullName>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Billing Street</fullName>
                </value>
                <value>
                    <fullName>Billing City</fullName>
                </value>
                <value>
                    <fullName>Billing State</fullName>
                </value>
                <value>
                    <fullName>Billing Postal Code</fullName>
                </value>
                <value>
                    <fullName>Billing Country</fullName>
                </value>
                <value>
                    <fullName>Shipping Street</fullName>
                </value>
                <value>
                    <fullName>Shipping City</fullName>
                </value>
                <value>
                    <fullName>Shipping State</fullName>
                </value>
                <value>
                    <fullName>Shipping Postal</fullName>
                </value>
                <value>
                    <fullName>Shipping Country</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Mailing Street</fullName>
                </value>
                <value>
                    <fullName>Mailing City</fullName>
                </value>
                <value>
                    <fullName>Mailing State</fullName>
                </value>
                <value>
                    <fullName>Mailing Postal</fullName>
                </value>
                <value>
                    <fullName>Mailing Country</fullName>
                </value>
                <value>
                    <fullName>Other Street</fullName>
                </value>
                <value>
                    <fullName>Other City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DupeCatcher Filter Rule</label>
    <nameField>
        <displayFormat>Rule-{0}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeCatcher Filter Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SFSSDupeCatcher__Validate_Scenario_Type</fullName>
        <active>true</active>
        <description>This field should match the scenario type for the parent scenario.</description>
        <errorConditionFormula>CASE(SFSSDupeCatcher__Scenario_Type__c, &quot;Account&quot;, 1, &quot;Contact&quot;, 2, &quot;Lead&quot;, 3, &quot;Lead to Account&quot;, 4, &quot;Lead to Contact&quot;, 5, &quot;Account (Person)&quot;, 6, &quot;Lead to Account (Person)&quot;, 7, &quot;Lead (Person)&quot; ,8 ,100 ) &lt;&gt; CASE( SFSSDupeCatcher__Scenario__r.SFSSDupeCatcher__Scenario_Type__c, &quot;Account&quot;, 1, &quot;Contact&quot;, 2, &quot;Lead&quot;, 3, &quot;Lead to Account&quot;, 4, &quot;Lead to Contact&quot;, 5, &quot;Account (Person)&quot;, 6, &quot;Lead to Account (Person)&quot;, 7, &quot;Lead (Person)&quot;,8, 99 )</errorConditionFormula>
        <errorDisplayField>SFSSDupeCatcher__Scenario_Type__c</errorDisplayField>
        <errorMessage>This field should match the scenario type for the parent scenario.</errorMessage>
    </validationRules>
</CustomObject>